# memory.python.org

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
.github/: dependabot.yml  zizmor.yml
.github/workflows/: benchmark.yml  ci.yml  daily-benchmark.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Procfile  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/app/: admin_auth.py  auth.py  config.py  crud.py  database.py  exceptions.py  factory.py  logging_config.py  logging_utils.py  main.py  models.py  oauth.py  schemas.py
backend/scripts/: init_db.py  manage_tokens.py  populate_binaries.py  populate_db.py  populate_simple_data.py
backend/tests/: conftest.py  production_fixtures.py  test_auth.py  test_benchmarks.py  test_binaries.py  test_commits.py  test_environments.py  test_health.py  test_logging_utils.py  test_production_data.py  test_public.py  test_upload.py
benchmark_results/13cac833471885564cbfde72a4cbac64ade3137a/: dict_operations_flamegraph.html  dict_operations_stats.json  (+5 more)
frontend/: .dockerignore  Dockerfile  Procfile  next.config.ts  package-lock.json  package.json
worker/: README.md  pyproject.toml
worker/src/memory_tracker_worker/: args.py  cli.py  commands.py  processing.py  validation.py
worker/src/memory_tracker_worker/benchmarks/: __init__.py  async_tree_base.py  dict_operations.py  json_dumps_base.py  list_operations.py  pickles_base.py  string_operations.py
(+120 files in other folders)
